Fix build and refactor